test/Translate/Control/table.p4.ref
error: loc("test/Translate/Control/table.p4":45:20): Method calls are not supported yet in table action lists.
note: loc("test/Translate/Control/table.p4":45:20): see current operation: 
"p4hir.scope"() ({
  %27 = "p4hir.variable"() <{init, name = "x2_inout_arg"}> : () -> !p4hir.ref<!p4hir.int<16>>
  %28 = "p4hir.read"(%arg2) : (!p4hir.ref<!p4hir.int<16>>) -> !p4hir.int<16>
  "p4hir.assign"(%28, %27) : (!p4hir.int<16>, !p4hir.ref<!p4hir.int<16>>) -> ()
  "p4hir.call"(%arg1, %27) <{callee = @Pipe::@foo}> : (!p4hir.int<16>, !p4hir.ref<!p4hir.int<16>>) -> ()
  %29 = "p4hir.read"(%27) : (!p4hir.ref<!p4hir.int<16>>) -> !p4hir.int<16>
  "p4hir.assign"(%29, %arg2) : (!p4hir.int<16>, !p4hir.ref<!p4hir.int<16>>) -> ()
  "p4hir.yield"() : () -> ()
}) : () -> ()
  43 |     apply {
  44 |         myTable.apply();
  45 |         test = test + 1;
     |                    ^
  46 |         local_hdr.f1 = 3;
  47 |     }
